--- a/prod_2.html
+++ b/prod_2.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Production Site 1</title>
+
 </head>
 <body>
 
 <h2>Production Site 1</h2>
 <div id="output"></div>
 
-<script src="dist/bundles/dev1/main.js"></script>
+<script src="/node_modules/steal/steal.production.js" main="buildit/dev2/main"></script>
 </body>
 </html>
