--- a/prod_2.html
+++ b/prod_2.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Production Site 1</title>
+    <title>Production Site 2</title>
 
 </head>
 <body>
 
-<h2>Production Site 1</h2>
+<h2>Production Site 2</h2>
 <div id="output"></div>
 
-<script src="/node_modules/steal/steal.production.js" main="buildit/dev2/main"></script>
+<!--<script src="/node_modules/steal/steal.production.js" env="window-production" bundles-path="./dist/bundles" config="package.json!npm" main="dev2/main"></script>-->
+<script src="/node_modules/steal/steal.production.js?dev2/main.js"></script>
 </body>
 </html>
