--- a/prod_1.html
+++ b/prod_1.html
@@ -9,6 +9,6 @@
 <h2>Production Site 1</h2>
 <div id="output"></div>
 
-<script src="dist/bundles/dev1/main.js"></script>
+<script src="dist/bundles/buildit/dev1/main.js"></script>
 </body>
 </html>
