--- a/subfolder/prod_1.html
+++ b/subfolder/prod_1.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Production Site 1</title>
-
 </head>
 <body>
 
-<h2>Production Site 2</h2>
+<h2>Production Site 1</h2>
 <div id="output"></div>
 
-<script src="node_modules/steal/steal.production.js" main="buildit/dev2/main"></script>
+<script src="../dist/bundles/buildit/dev1/main.js" data-bundles-path="../dist/bundles/"></script>
 </body>
 </html>
