--- a/prod_2.html
+++ b/prod_2.html
@@ -11,6 +11,6 @@
 <div id="output"></div>
 
 <!--<script src="/node_modules/steal/steal.production.js" env="window-production" bundles-path="./dist/bundles" config="package.json!npm" main="dev2/main"></script>-->
-<script src="/node_modules/steal/steal.production.js?dev2/main.js"></script>
+<script src="/node_modules/steal/steal.production.js" config="/package.json!npm" main="dev2/main"></script>
 </body>
 </html>
